# wikipedia_simulation

./: .gitignore  CMakeLists.txt  README.md  build.sh  demo.py  main.cpp  pyproject.toml
.devcontainer/development/: devcontainer.json
.github/workflows/: ci.yaml
docker/: Dockerfile.development
include/: network.hpp  rng.hpp
include/wikipedia_module/: network.hpp
python/wikipedia_module/: __init__.py  _core.pyi
src/: bindings.cpp  main.cpp  network.cpp
tests/: test_constructors.py
