[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "wikipedia_module"
version = "1.0.0"
description = "Wikipedia network evolution simulation with C++ backend"
authors = [{name = "Robert Attila Magyar", email = "robertmagyar.023@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "tqdm",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

# Explicitly maps the python package directory. 
# This tells scikit-build-core to automatically include everything inside it
wheel.packages = ["python/wikipedia_module"]

[tool.scikit-build.cmake.define]
CMAKE_TOOLCHAIN_FILE = "vcpkg/scripts/buildsystems/vcpkg.cmake"